Atualização do layout, funcionalidades do nav, formulário de contato

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,21 +1,16 @@
 <footer>
     <section>
-      <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-3 mt-5 mb-3 border-top">
+        
         <div class="col-md-4 d-flex align-items-center">
           <div class="lc-block text-center mb-3 mb-md-0">
             <a class="navbar-brand" href="https://library.livecanvas.com/sections/">
               <img class="img-fluid m-2" src="./images/logo/logo.png" alt="my brand" width="150px">
             </a>
-            
-    
           </div>
         </div>
-        <div class=" text-center">
-          <p>@ 2024, Psicóloga CRP 05/73889</p>
-          <p>Site desenvolvido por <a href="#">F1 Dev</a></p>
-        </div>
-    
-        <div class="col-md-4 justify-content-end d-flex gap-3">
+        
+        <div class="col-md-4 d-flex justify-content-center gap-3 pb-3">
           <div class="lc-block">
     
             <a href="#">
@@ -44,6 +39,12 @@
     
           </div>
         </div>
+
+        <div class="col-md-4 d-flex align-items-center align-self-center align-items-lg-end pb-lg-0 pt-lg-5 flex-column">
+          <span>@ 2024, Psicóloga CRP 05/73889</span>
+          <span>Site desenvolvido por <a href="#">F1 Dev</a></span>
+        </div>
+    
       </div>
     </section>
   </footer>
