--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,34 @@
-
+*{
+  box-sizing: border-box;
+}
 h1,
 h2,
 h3,
 h5,
 a,
-hr{
+hr,
+.nav-link,
+.card-body h5{
  color: #61302B ;
  font-family: 'Martel Sans';
  text-decoration: none;
 } 
 
+
 p, h4, button, span{
     color: #A99382;
     font-family: 'Open Sans';
     
+}
+
+.navbar-nav .nav-link.active{
+  color: #a3720f;
+}
+
+/* Cor de fundo do autocomplete INPUT E TEXTAREA */
+input:-webkit-autofill,textarea {
+  filter: saturate(1) hue-rotate(200deg);
+  -webkit-text-fill-color: #6c757d;
 }
 
 .btn-primary {
@@ -35,7 +50,7 @@ p, h4, button, span{
 
 .hero_area {
     position: relative;
-    min-height: 100vh;
+    min-height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -43,6 +58,7 @@ p, h4, button, span{
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    /* box-shadow: 20px 0px 30px rgba(85, 85, 85, 0.5); */
   }
   
   .hero_area .hero_bg_box {
@@ -130,36 +146,44 @@ p, h4, button, span{
 }
 
 /* animação pulse com brilho */
-.pulse {
-  animation: pulse 1.2s infinite;
+.pulse-brilho{
+  animation: pulse 1s infinite;
   margin: 0 auto;
   display: table;
   margin-top: 50px;
   animation-direction: alternate;
-  -webkit-animation-name: pulse;
-  animation-name: pulse;
+  -webkit-animation-name: pulse-brilho;
+  animation-name: pulse-brilho;
 }
 
-@-webkit-keyframes pulse {
+@-webkit-keyframes pulse-brilho {
   0% {
+    transform: translateZ(0);
+    backface-visibility: hidden;
     -webkit-transform: scale(1);
-    -webkit-filter: brightness(100%);
+    /* -webkit-filter: brightness(100%); */
   }
   100% {
-    -webkit-transform: scale(1.1);
-    -webkit-filter: brightness(140%);
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-transform: scale(1.07);
+    /* -webkit-filter: brightness(110%); */
   }
 }
 
-@keyframes pulse {
+@keyframes pulse-brilho {
   0% {
+    transform: translateZ(0);
+    backface-visibility: hidden;
     transform: scale(1);
-    filter: brightness(100%);
+    /* filter: brightness(100%); */
   }
   100% {
-    transform: scale(1.1);
-    filter: brightness(140%);
+    
+    transform: scale(1.07);
+    /* filter: brightness(110%); */
   }
+
 }
 
 
@@ -174,10 +198,13 @@ p, h4, button, span{
   transform: scale();
 }
 .p1{
-background-image: url('imagens kl/layout_kl.png');
+background-image: url('../images/conversando_com_terapeuta.jpg');
 }
 .p2{
 background-image: url('imagens kl/layout_kl2.png');
+}
+.transparencia{
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 
@@ -223,4 +250,18 @@ background-image: url('imagens kl/layout_kl2.png');
 .botao-dourado:hover::before {
   background-position: right;
   transition-duration: 1s;
+}
+
+.btn-modal-trat:hover{
+
+
+  transform:scale(1.05);
+  transition: 0.7s;
+  filter: brightness(140%)
+
+}
+
+.h1-modal-trat:hover{
+
+
 }
