--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -2,15 +2,15 @@
 <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-4 pb-5 pt-0">
+      <div class="container col-xxl-8 px-4 pb-lg-5 pt-0">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           
           <div class="col-lg-8 mb-3 d-flex flex-column align-items-center" data-anima="esquerda">
             
-            <img src="./images/logo/logo.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="50%" height="" loading="lazy">
+            <img src="./images/logo/logo.png" class="d-block mx-lg-auto img-fluid pb-3" alt="Monica Costa" width="50%" height="" loading="lazy">
             
-            <p class="lead display-6 py-3 text-lg-center">
-              Escolha como deseja fazer contato?
+            <p class="lead display-6 py-3 text-center">
+              Como deseja fazer contato?
             </p>
            
           </div>
@@ -21,36 +21,14 @@
     </div>  
 
 <!-- Contacts -->
-<section id="contato" class="container p-5">
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-
-    <div class="col text-center">
-      <a href="https://wa.me/+14402431094" class="link-sucess">
-        <div class="lc-block card h-100 p-4 link-success shadow rounded-2">
-            <div class="lc-block card-body">
-                <div class="lc-block mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="" viewBox="0 0 16 16" lc-helper="svg-icon">
-                        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"></path>
-                    </svg>
-
-                </div>
-                <div class="lc-block">
-                    <div editable="rich">
-
-                        <p>WhatsApp</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-      </a>
-    </div>
+<section id="contato" class="container py-5" data-anima="baixo">
+  <div class="row row-cols-2 row-cols-md-2 row-cols-lg-4 g-3">
 
     <div class="col text-center">
         <a href="mailto:contato@psimonicacosta.com" class="link-success">
-          <div class="lc-block card h-100 p-4 link-danger  shadow rounded-2">
+          <div class="lc-block card h-100 p-0 link-danger  shadow rounded-2">
               <div class="lc-block card-body">
-                  <div class="lc-block mb-4">
+                  <div class="lc-block my-4">
                       <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" viewBox="0 0 16 16" lc-helper="svg-icon" class="">
                           <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"></path>
                       </svg>
@@ -69,10 +47,32 @@
       </div>
 
       <div class="col text-center">
-        <a href="tel:+18182639234" class="link-info">
-          <div class="lc-block card h-100 p-4 link-secondary shadow rounded-2">
+        <a href="https://wa.me/+14402431094" class="link-sucess">
+          <div class="lc-block card h-100 p-0 link-success shadow rounded-2">
               <div class="lc-block card-body">
-                  <div class="lc-block mb-4">
+                  <div class="lc-block my-4">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" class="" viewBox="0 0 16 16" lc-helper="svg-icon">
+                          <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"></path>
+                      </svg>
+  
+                  </div>
+                  <div class="lc-block">
+                      <div editable="rich">
+  
+                          <p>WhatsApp</p>
+  
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col text-center">
+        <a href="tel:+18182639234" class="link-info">
+          <div class="lc-block card h-100 p-0 link-secondary shadow rounded-2">
+              <div class="lc-block card-body">
+                  <div class="lc-block my-4">
                       <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" viewBox="0 0 16 16" lc-helper="svg-icon">
                           <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
                       </svg>
@@ -81,7 +81,7 @@
                   <div class="lc-block">
                       <div editable="rich">
 
-                          <p>(21) 98553-3394</p>
+                          <p><smal>(21) 98553-3394</smal></p>
                       </div>
                   </div>
               </div>
@@ -91,9 +91,9 @@
 
       <div class="col text-center ">
         <a class="" href="https://goo.gl/maps/Nd4GahEq7DN7ky317">
-          <div class="lc-block card h-100 p-4 p link-primary  shadow rounded-2">
+          <div class="lc-block card h-100 p-0 p link-primary  shadow rounded-2">
               <div class="lc-block card-body">
-                  <div class="lc-block mb-4">
+                  <div class="lc-block my-4">
                       <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" fill="currentColor" viewBox="0 0 16 16" lc-helper="svg-icon" class="">
                           <path d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"></path>
                           <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z"></path>
@@ -103,7 +103,7 @@
                   <div class="lc-block">
                       <div editable="rich">
 
-                          <p>Niterói - RJ <br></p>
+                          <p>Niterói - RJ</p>
 
                       </div>
                   </div>
@@ -117,7 +117,7 @@
 <!-- End Contacts -->
   
   <!-- Form Contact -->
-  <section id="contact" class="section db p-5">
+  <section id="contact" class="section db py-5 px-3">
     <div class="container">
         <div class="section-title text-center">
             <h3>Contato</h3>
@@ -128,33 +128,67 @@
             <div class="col-md-12">
                 <div class="contact_form">
                     <div id="message"></div>
-                      <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                      <form id="contactForm" name="sentMessage" method="post" action="/contato">
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
-                              <input class="form-control" id="name" type="text" placeholder="Nome" required="required" data-validation-required-message="Please enter your name.">
+                              <input class="form-control" name="name" type="text" placeholder="Nome" required="required" data-validation-required-message="Please enter your name.">
                               <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                              <input class="form-control" id="email" type="email" placeholder="Email" required="required" data-validation-required-message="Please enter your email address.">
+                              <input class="form-control" name="email" type="email" placeholder="Email" required="required" data-validation-required-message="Please enter your email address.">
                               <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                              <input class="form-control" id="phone" type="tel" placeholder="Telefone" required="required" data-validation-required-message="Please enter your phone number.">
+                              <input class="form-control" name="tel" type="tel" placeholder="Telefone" required="required" data-validation-required-message="Please enter your phone number.">
                               <p class="help-block text-danger"></p>
                             </div>
                           </div>
                           <div class="col-md-6">
                             <div class="form-group">
-                              <textarea class="form-control" style="min-height: 147px;" id="message" placeholder="Sua mensagem" required="required" data-validation-required-message="Please enter a message."></textarea>
+                              <textarea class="form-control" style="min-height: 147px;" name="message" placeholder="Sua mensagem" required="required" data-validation-required-message="Please enter a message."></textarea>
                               <p class="help-block text-danger"></p>
                             </div>
                           </div>
                           <div class="clearfix"></div>
-                          <div class="col-lg-12 my-lg-2 d-flex justify-content-center">
-                            <div id="success"></div>
-                            <button id="sendMessageButton" class="botao-dourado btn-hover-lt" type="submit"><span class="">Enviar</span></button>
+                          <div class="col-lg-12 my-lg-2 d-flex justify-content-center align-items-center flex-column">
+                            
+                              <% if(formContato.info){ %>
+                                  <div class="container p-4 position-absolute bottom-0 mx-auto pulse-brilho">                                
+                                    <div class="row">                                
+                                      <div class="col-md-4 mx-auto w-auto">                                
+                                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                
+                                          <span><%= formContato.info %>! Obrigada pelo contato, responderei o mais rápido possível!</span>
+                                
+                                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                
+                                        </div>                                
+                                      </div>
+                                    </div>                              
+                                  </div>
+                              <% } %>
+
+                              <% if(formContato.err){ %>
+                                <div class="container p-4 position-absolute bottom-0 mx-auto pulse-brilho">                                
+                                  <div class="row">                                
+                                    <div class="col-md-4 mx-auto w-auto">                                
+                                      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                              
+                                        <span><%= formContato.err %>, por favor, tente uma das opções abaixo</span>
+                              
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                              
+                                      </div>                                
+                                    </div>
+                                  </div>                              
+                                </div>
+                              <% } %>
+                          
+                            
+                            <button id="sendMessageButton" class="botao-dourado btn-hover-lt" type="submit"> <span class="">Enviar</span></button>
                           </div>
+                          
                         </div> <!--end row -->
                       </form>
                     </div>
