--- a/views/header.ejs
+++ b/views/header.ejs
@@ -34,36 +34,40 @@
 
       <!-- Header section -->
       <header>
-      <nav class="navbar navbar-expand-lg bg-body-none">
+      <nav class="navbar navbar-expand-lg bg-body-none sticky-top">
         <div class="container-fluid col-8">
           <a class="navbar-brand" href="#"><img src="./images/logo/logo-3.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav gap-3">
+            <ul class="navbar-nav gap-3" id="pills-tab" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+                <a class="nav-link" id="inicio" href="/">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/sobre">Sobre</a>
+                <a class="nav-link" id="sobre" href="/sobre">Sobre</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="tratamentos" href="" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                   Tratamentos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/tratamentos#depressao">Depressão</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos#ansiedade">Ansiedade</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos#terapiaCasal">Terapia de Casal</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos#avaliacaoPsi">Avaliação Psicológica</a></li>
+                  <li><a class="dropdown-item" href="/tratamentos" id="depressao">Depressão</a></li>
+                  <li><a class="dropdown-item" href="/tratamentos" id="ansiedade">Ansiedade</a></li>
+                  <li><a class="dropdown-item" href="/tratamentos" id="casal">Terapia de Casal</a></li>
+                  <li><a class="dropdown-item" href="/tratamentos" id="avaliacao">Avaliação Psicológica</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contato">Contato</a>
+                <a class="nav-link" id="contato" href="/contato">Contato</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       </header>
+<!-- 
+
+
+      
