--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -2,7 +2,7 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-4 pb-5 pt-0">
+      <div class="container col-xxl-8 px-5 pb-5 pt-0">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
           <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
@@ -16,13 +16,13 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">
               Mônica Costa
             </h1> -->
-            <p class="lead text-lg-end">
-              Aconselhamento e Terapia sistêmica para Conscientizar e desenvolver juntos
+            <p class="lead text-center py-3">
+              Me conheça um pouco mais
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <div class="d-grid gap-2 d-md-flex justify-content-center">
               <button type="button" class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
                 <span>
-                  <a href="#historia" style="color: #b4882f; ">Minha História</a>
+                  <a id="btnMinhaHistoria" href="" style="color: #b4882f; ">Minha História</a>
                 </span>
                </button>
             </div>
@@ -34,10 +34,8 @@
   </div>
 
 <!-- History -->
- 
-  
-<section id="historia" class="container py-5">
-	<div class="row">
+<section id="minhaHistoria" class="container mt-5 pt-5">
+	<div class="row px-3 px-lg-0">
 		<div class="col-md-4 align-self-center" data-anima="esquerda">
 			<div class="lc-block border-top py-4" style="letter-spacing:10px">
 				<div editable="rich">
@@ -73,24 +71,22 @@
 		</div>
 	</div>
 </section> 
- 
-  
 <!-- End History -->
 
-<div class="container d-grid gap-2 d-md-flex justify-content-md-center mt-2 mb-4" data-anima="baixo">
-    <button type="button" class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
-      <span>
-        <a href="#experiencia" style="color: #b4882f; ">Minha Experiência</a>
-      </span>
-     </button>
-  </div>
+
   
 <!-- Curriculo -->
- 
-  
 <section id="experiencia" class="container py-5">
-	<div class="row">
+	<div class="row px-3 px-lg-0 flex-lg-row-reverse">
 		
+		<div class="col-md-4 align-self-center" data-anima="direita">
+			<div class="lc-block border-top py-4" style="letter-spacing:10px">
+				<div editable="rich">
+					<h2><strong>MINHA EXPERIÊNCIA</strong></h2>
+				</div>
+			</div>
+		</div>
+
 		<div class="col-md-8" data-anima="esquerda">
 			<div class="lc-block">
 				<div editable="rich">
@@ -117,17 +113,9 @@
 				</div>
 			</div>
 		</div>
-        <div class="col-md-4 align-self-center" data-anima="direita">
-			<div class="lc-block border-top py-4" style="letter-spacing:10px">
-				<div editable="rich">
-					<h2><strong>MINHA EXPERIÊNCIA</strong></h2>
-				</div>
-			</div>
-		</div>
+       
 	</div>
 </section> 
- 
-  
 <!-- End Curriculo -->
 
 <div class="container d-grid gap-2 d-md-flex justify-content-md-center mb-5" data-anima="baixo">
