--- a/views/tratamentos.ejs
+++ b/views/tratamentos.ejs
@@ -2,9 +2,9 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-4 pb-5 pt-0">
+      <div class="container col-xxl-8 px-5 pb-lg-5 pt-0">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
-          <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
+          <div class="col-10 col-sm-8 col-lg-6 my-lg-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
           <div class="col-lg-6 my-3" data-anima="esquerda">
@@ -16,92 +16,160 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">
               Mônica Costa
             </h1> -->
-            <p class="lead text-lg-end">
-              Aconselhamento e Terapia sistêmica para Conscientizar e desenvolver juntos
+            <p class="lead text-center pt-3">
+				Vamos tratar juntos os comportamentos, emoções ou pensamentos que te trazem sofrimento
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button type="button" class="btn-lg px-4 me-md-2 botao-dourado" style="background-color:#000"::before>
                 <span>
                   <a href="#depressao" style="color: #b4882f; ">Tratamentos</a>
                 </span>
                </button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
       <!-- end hero section -->
 
-  </div>
+	</div>
 
 
 <!-- Tratamentos -->  
-<section class="container-fluid p-0 overflow-hidden">
-	<div id="depressao" class="row flex-lg-row-reverse g-0 align-items-center" data-anima="direita">
-		<div class="col-lg-6">
-			<div class="lc-block">
-				<img class="w-100" src="https://images.unsplash.com/photo-1428550590922-34c77f716ad4?crop=entropy&amp;cs=tinysrgb&amp;fit=crop&amp;fm=jpg&amp;ixid=M3wzNzg0fDB8MXxzZWFyY2h8Mnx8YmxhY2slMjBhbmQlMjB3aGl0ZXxlbnwwfDB8fHwxNzAzMDc0MzIzfDA&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080&amp;h=768" srcset="" sizes="" width="" height="" alt="Photo by Jeremy Ricketts" loading="lazy">
-			</div>
-		</div>
-		<div class="col-lg-6">
-			<div class="lc-block p-3">
-				<div editable="rich">
-					<h1>Depressão</h1>
-					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<div id="ansiedade" class="row g-0 align-items-center" data-anima="esquerda">
-		<div class="col-lg-6">
-			<div class="lc-block">
-				<img class="w-100" src="https://images.unsplash.com/photo-1523572989266-8239d24ebb68?crop=entropy&amp;cs=tinysrgb&amp;fit=crop&amp;fm=jpg&amp;ixid=M3wzNzg0fDB8MXxzZWFyY2h8M3x8YmxhY2slMjBhbmQlMjB3aGl0ZXxlbnwwfDB8fHwxNzAzMDc0MzIzfDA&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080&amp;h=768" srcset="" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
-			</div>
+<div class="d-lg-flex px-lg-5">
+<!-- ANSIEDADE -->
+<section class="container d-flex justify-content-center my-5">
+	
+	<!-- Button trigger modal -->
+<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAnsiedade" data-anima="baixo">
+	<h1 class="position-absolute top-50 start-50 translate-middle display-4">ANSIEDADE</h1>
+	<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+</button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="modalAnsiedade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalAnsiedadeLabel" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h1 class="modal-title fs-5" id="modalAnsiedadeLabel">Ansiedade</h1>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		</div>
-		<div class="col-lg-6">
-			<div class="lc-block p-3">
-				<div editable="rich">
-					<h1>Ansiedade</h1>
-					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
-				</div>
-			</div>
+		<div class="modal-body">
+			<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
 		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+		  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+		</div>
+	  </div>
 	</div>
-</section>  
+  </div>
+
+</section>
+<!-- end Ansiedade-->
+
+
+<!-- DEPRESSÃO -->
+<section class="container d-flex justify-content-center my-5">
+	
+	<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-4">DEPRESSÃO</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+	</button>
+	  
+	  <!-- Modal -->
+	  <div class="modal fade" id="modalDepressao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalDepressaoLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h1 class="modal-title fs-5" id="modalDepressaoLabel">Depressão</h1>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+			  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+	</section>
+<!-- end Depressao-->
+
+</div>
+
+<div class="d-lg-flex px-lg-5">
+<!-- TRANSTORNO -->
+<section class="container d-flex justify-content-center my-5">
+	
+	<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTranstorno" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-4">TRANSTORNO</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+			</button>
+	  
+	  <!-- Modal -->
+	  <div class="modal fade" id="modalTranstorno" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalTranstornoLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h1 class="modal-title fs-5" id="modalTranstornoLabel">Transtorno</h1>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+			  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+	</section>
+<!-- end Transtorno-->
+
+
+
+<!-- AVALIAÇÃO -->
+<section class="container d-flex justify-content-center my-5">
+	
+	<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAvaliacao" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-4">AVALIAÇÃO</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+		
+	</button>
+	  
+	  <!-- Modal -->
+	  <div class="modal fade" id="modalAvaliacao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalAvaliacaoLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h1 class="modal-title fs-5" id="modalAvaliacaoLabel">Avaliação</h1>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+				<button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+</section>
+<!-- end Avaliação-->
+
+</div>
     
-<section class="container-fluid p-0 overflow-hidden">
-	<div id="terapiaCasal" class="row flex-lg-row-reverse g-0 align-items-center" data-anima="direita">
-		<div class="col-lg-6">
-			<div class="lc-block">
-				<img class="w-100" src="https://images.unsplash.com/photo-1428550590922-34c77f716ad4?crop=entropy&amp;cs=tinysrgb&amp;fit=crop&amp;fm=jpg&amp;ixid=M3wzNzg0fDB8MXxzZWFyY2h8Mnx8YmxhY2slMjBhbmQlMjB3aGl0ZXxlbnwwfDB8fHwxNzAzMDc0MzIzfDA&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080&amp;h=768" srcset="" sizes="" width="" height="" alt="Photo by Jeremy Ricketts" loading="lazy">
-			</div>
-		</div>
-		<div class="col-lg-6">
-			<div class="lc-block p-3">
-				<div editable="rich">
-					<h1>Terapia de Casal</h1>
-					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="avaliacaoPsi" class="row g-0 align-items-center" data-anima="esquerda">
-		<div class="col-lg-6">
-			<div class="lc-block">
-				<img class="w-100" src="https://images.unsplash.com/photo-1523572989266-8239d24ebb68?crop=entropy&amp;cs=tinysrgb&amp;fit=crop&amp;fm=jpg&amp;ixid=M3wzNzg0fDB8MXxzZWFyY2h8M3x8YmxhY2slMjBhbmQlMjB3aGl0ZXxlbnwwfDB8fHwxNzAzMDc0MzIzfDA&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080&amp;h=768" srcset="" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
-			</div>
-		</div>
-		<div class="col-lg-6">
-			<div class="lc-block p-3">
-				<div editable="rich">
-					<h1>Avaliação Psicológica</h1>
-					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>   
 <!--end Tratamentos -->
 
 <!-- Botão Contato -->
