--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,6 +24,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Martel+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- btn whatsapp-->
+  <!-- <div class=""> -->
+    <a id="btn-whats" href="https://wa.me/+14402431094" target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;">
+        <img src="./images/logo-whatsapp.png" class="btn-modal-trat" width="70px">
+                <!-- <div class="lc-block">
+                    <div editable="rich">
+
+                        <p>WhatsApp</p>
+
+                    </div>
+                </div> -->
+    </a>
+  <!-- </div> -->
+
   <div class="hero_area">
 
       <div class="hero_bg_box">
@@ -34,10 +48,10 @@
 
       <!-- Header section -->
       <header>
-      <nav class="navbar navbar-expand-lg bg-body-none sticky-top">
-        <div class="container-fluid col-8">
-          <a class="navbar-brand" href="#"><img src="./images/logo/logo-3.png" alt="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg ">
+        <div id="nav" class="container-fluid col-8">
+          <a class="navbar-brand" href="/"><img src="./images/logo/logo-3.png" alt="logo"></a>
+          <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
@@ -66,6 +80,7 @@
           </div>
         </div>
       </nav>
+      
       </header>
 <!-- 
 
