--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,12 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-5 pt-0">
+      <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
           <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
-          <div class="col-lg-6 my-3" data-anima="esquerda">
+          <div class="col-lg-6 my-3 pt-lg-4" data-anima="esquerda">
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             
@@ -32,6 +32,7 @@
 
   </div>
 
+<main style="overflow-x: hidden;">
 
   <!-- Section Quando devo procurar terapia-->
   <section id="section1" class="pt-5 pt-lg-2 mt-lg-5 d-flex flex-column align-items-center text-center">
@@ -135,16 +136,16 @@
 		<p class="lead mb-2 container">Muitas pessoas ainda resistem à ideia de fazer terapia por medo, preconceito ou apenas por não saberem que se trata de uma ferramenta que apoia na <strong>resolução de problemas a partir de um outro ponto de vista</strong>.</p>
 	</div>
 	
-	<div class="container w-100 parallax p1 rounded mb-3" style="height: 20rem;">
+	<div class="container w-100 parallax p1 rounded mb-3" style="height: 20rem; width: auto;">
 	</div>
 
-  <div class="align-self-center text-center">
+  <div class="d-flex justify-content-center align-items-center">
     
 		<div class="row w-100 d-flex align-items-center justify-content-center">
 
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-4">
 				
-				<div class="lc-block p-4 my-3 rounded" data-anima="esquerda">
+				<div class="lc-block p-4 my-3 rounded" data-anima="direita">
 					<div editable="rich">
 
 						<h5><strong>&gt; Autoconhecimento</strong></h5>
@@ -162,7 +163,7 @@
 					</div>
 				</div><!-- /lc-block -->
 
-        		<div class="lc-block p-4 my-3 rounded transparencia" data-anima="esquerda">
+        		<div class="lc-block p-4 my-3 rounded" data-anima="direita">
 					<div editable="rich">
 
 						<h5><strong>&gt; Inteligência Emocional</strong></h5>
@@ -192,7 +193,7 @@
 					</div>
 				</div><!-- /lc-block -->
 
-				<div class="lc-block p-4 my-3 rounded" data-anima="esquerda">
+				<div class="lc-block p-4 my-3 rounded" data-anima="direita">
 					<div editable="rich">
 
 						<h5><strong>&gt; Gerencie Pensamentos</strong></h5>
@@ -216,6 +217,8 @@
 </section> 
 <!-- end section features -->
 
+</main>
+
   <!-- Section Terapia online -->
   <div class="container py-4" data-anima="baixo">
 	<div class="row mb-4 align-items-center flex-lg-row-reverse">
@@ -231,7 +234,7 @@
 			<div class="lc-block mb-4">
 				<div editable="rich">
 
-					<p class="lead">As sessões online foram permitidas pelo Conselho Federal de Psicologia a partir de 2018, desde que o profissional seja devidamente <strong>cadastrado na plataforma e-Psi</strong>. Além disso, o modelo tradicional de encontros presenciais mudou radicalmente nos últimos anos e passou por uma grande transformação em 2020, devido à pandemia. Por isso, tenho me aprimorado a cada dia para manter a <strong>mesma relação de acolhimento e empatia</strong> com todos que atendo.</p>
+					<p class="">As sessões online foram permitidas pelo Conselho Federal de Psicologia a partir de 2018, desde que o profissional seja devidamente <strong>cadastrado na plataforma e-Psi</strong>. Além disso, o modelo tradicional de encontros presenciais mudou radicalmente nos últimos anos e passou por uma grande transformação em 2020, devido à pandemia. Por isso, tenho me aprimorado a cada dia para manter a <strong>mesma relação de acolhimento e empatia</strong> com todos que atendo.</p>
 
 				</div>
 			</div>
@@ -321,7 +324,7 @@
 
   <!-- Section Sobre -->
   <section class="container py-5 my-5">
-	<div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg" data-anima="baixo">
+	<div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-start rounded-3 border shadow-lg" data-anima="baixo">
 	  <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
 		<div class="lc-block mb-3">
 		  <div editable="rich">
@@ -335,16 +338,16 @@
 
 		<div class="lc-block mb-3">
 		  <div editable="rich">
-			<p class="lead">Sou educadora social, consultora sistêmica e terapeuta (familiar). E minha motivação é o seu desenvolvimento!
-			  Há muitos anos que trabalho apaixonadamente com pessoas em suas questões individuais. Interesso-me pelas histórias de vida, pelas perspectivas e pelos enormes recursos que cada pessoa traz consigo.
-			  Sou acessível, curioso e aberto a todos os planos de vida. Descrevo meu estilo de trabalho como cauteloso, mas claro e orientado para soluções.
+			<p class="lead">Sou psicóloga, especializada em terapia cognitivo-comportamental. E minha motivação é o seu desenvolvimento!
+			  Tenho trabalhado apaixonadamente com pessoas em suas questões individuais. Me interesso pelas histórias de vida, pelas perspectivas e pelos enormes recursos que cada pessoa traz consigo.
+			  Sou acessível, curiosa e aberta a todos os planos de vida.
 			</p>
-			<p class="lead">Terei prazer em acompanhar seus processos de desenvolvimento e mudança.</p>
+			<p class="lead">Quer saber como me tornei psicóloga depois de uma vida de desafios e mudanças?</p>
 		  </div>
 		</div>
 
 		<div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start">
-		  <a class="botao-dourado px-4 w-auto" href="/sobre" role="button"><span>Conhecer mais</span></a>
+		  <a class="botao-dourado px-4 mt-3 w-auto pulse-brilho" href="/sobre" role="button"><span>Conheça minha história</span></a>
 		</div>
 	  </div>
 	  <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
