--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -2,12 +2,12 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-5 pt-0">
+	  <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
           <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
-          <div class="col-lg-6 my-3" data-anima="esquerda">
+          <div class="col-lg-6 my-3  pt-lg-4" data-anima="esquerda">
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             <!-- <h4>
@@ -33,8 +33,11 @@
 
   </div>
 
+
+<main style="overflow-x: hidden; overflow-y: hidden">
+
 <!-- History -->
-<section id="minhaHistoria" class="container mt-5 pt-5">
+<section id="minhaHistoria" class="container my-5 py-5">
 	<div class="row px-3 px-lg-0">
 		<div class="col-md-4 align-self-center" data-anima="esquerda">
 			<div class="lc-block border-top py-4" style="letter-spacing:10px">
@@ -47,27 +50,45 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus porttitor dui, in vestibulum metus pulvinar sit amet. Phasellus finibus fermentum eros quis maximus. Aenean feugiat elit id quam ornare, in iaculis nunc tincidunt. Nullam pellentesque ante sit amet ipsum pulvinar, ac accumsan metus pulvinar.&nbsp;</strong></p>
+					<p class="lead"><strong>A minha jornada de professora a psicóloga.&nbsp;</strong></p>
 
 
 				</div>
 			</div>
+
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Mauris sollicitudin, ante quis suscipit molestie, est tellus semper nunc, quis porttitor tellus tortor et orci. Quisque egestas gravida eros et tristique. Praesent arcu turpis, rhoncus at nunc ut, ornare ultrices purus. Nullam fermentum eros eget sapien dignissim eleifend. Maecenas sodales, neque vestibulum aliquam varius, elit turpis tincidunt enim, eu pellentesque leo ante sit amet lectus.</p>
+					<p>Eu sempre quis ser professora, mas a vida me levou para a Administração. Trabalhei nessa área por dez anos, mas nunca deixei de gostar de ouvir e ajudar as pessoas. <strong>Eu também passei por momentos muito difíceis</strong>, como perder o meu primeiro filho, e ter uma síndrome que afetava a minha gravidez. Mas eu não perdi a fé, e consegui ter mais dois filhos, que são a minha alegria.</p>
 
 
 				</div>
 			</div>
+
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p><em>Pellentesque eu dolor in enim efficitur dapibus id quis nisi. Quisque interdum bibendum vulputate. Nunc dui lacus, ultrices id gravida tempor, sollicitudin dapibus nisl. Vivamus dictum quam in purus commodo molestie. Mauris ultricies tortor urna. Praesent non aliquet lectus. Sed eget massa mauris. Vestibulum euismod cursus tortor, et aliquet orci facilisis eu. Cras ultricies luctus dolor quis laoreet. Suspendisse nisi massa, feugiat in dignissim sed, fermentum sed nibh.</em></p>
-
+					<p><em>Com tantas mudanças, eu me senti perdida, e procurei a terapia. <strong>me ajudou a me conhecer melhor, a superar os meus traumas, e a encontrar um novo sentido para a vida.</strong> Ela me fez lembrar do meu sonho de infância, de ser professora, mas de uma forma diferente. <strong>Percebi que eu queria ensinar as pessoas a se amarem, a se cuidarem, a se realizarem.</strong> Entendi que eu queria ser psicóloga.</em></p>
 
 				</div>
 			</div>
+
+			<div class="lc-block">
+				<div editable="rich">
+
+					<p>Eu fiz outra faculdade, de Psicologia, e me apaixonei pela profissão. Me especializei em Terapia Cognitivo-Comportamental, e comecei a atuar em consultório e principalmente online por ser mais acessível e gerar os mesmos resultados, atendendo jovens, adultos e idosos. Também criei um perfil no Instagram, onde eu compartilho conteúdos sobre psicologia e saúde mental.</p>
+
+				</div>
+			</div>
+
+			<div class="lc-block">
+				<div editable="rich">
+
+					<p>Hoje, eu sou feliz, realizada e grata. Eu sou a Psicóloga Mônica, e <strong>tenho o prazer de ensinar e aprender com as pessoas que passam pelo meu caminho.</strong> Eu tenho o orgulho de fazer parte dessa profissão tão nobre e tão necessária. Eu tenho a esperança de contribuir para um mundo melhor, mais humano, e mais feliz.</p>
+
+				</div>
+			</div>
+
 		</div>
 	</div>
 </section> 
@@ -76,7 +97,7 @@
 
   
 <!-- Curriculo -->
-<section id="experiencia" class="container py-5">
+<!-- <section id="experiencia" class="container py-5 mt-5">
 	<div class="row px-3 px-lg-0 flex-lg-row-reverse">
 		
 		<div class="col-md-4 align-self-center" data-anima="direita">
@@ -115,16 +136,17 @@
 		</div>
        
 	</div>
-</section> 
+</section>  -->
 <!-- End Curriculo -->
 
-<div class="container d-grid gap-2 d-md-flex justify-content-md-center mb-5" data-anima="baixo">
+<div class="container d-grid gap-2 d-md-flex justify-content-center mb-5" data-anima="baixo">
     <button type="button" class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
       <span>
-        <a href="/tratamentos" style="color: #b4882f; ">Tratamentos</a>
+        <a calss="pulse-brilho" href="/tratamentos" style="color: #b4882f; ">Tratamentos</a>
       </span>
      </button>
   </div>
 
+</main>
 <!-- footer -->
 <%- include ('footer') %>
