--- a/views/tratamentos.ejs
+++ b/views/tratamentos.ejs
@@ -2,12 +2,12 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-lg-5 pt-0">
+      <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
-          <div class="col-10 col-sm-8 col-lg-6 my-lg-2" data-anima="direita">
+          <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
-          <div class="col-lg-6 my-3" data-anima="esquerda">
+          <div class="col-lg-6 my-3  pt-lg-5" data-anima="esquerda">
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             <!-- <h4>
@@ -36,12 +36,13 @@
 
 <!-- Tratamentos -->  
 
-<div class="d-lg-flex px-lg-5">
+<div class="d-lg-flex justify-content-center container">
+
 <!-- ANSIEDADE -->
-<section class="container d-flex justify-content-center my-5">
+<section class="container d-flex justify-content-center my-5 px-lg-5">
 	
 	<!-- Button trigger modal -->
-<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAnsiedade" data-anima="baixo">
+<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAnsiedade" data-anima="baixo">
 	<h1 class="position-absolute top-50 start-50 translate-middle display-4">ANSIEDADE</h1>
 	<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
 </button>
@@ -70,10 +71,10 @@
 
 
 <!-- DEPRESSÃO -->
-<section class="container d-flex justify-content-center my-5">
+<section class="container d-flex justify-content-center my-5 px-lg-5">
 	
 	<!-- Button trigger modal -->
-	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
 		<h1 class="position-absolute top-50 start-50 translate-middle display-4">DEPRESSÃO</h1>
 		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
 	</button>
@@ -102,22 +103,23 @@
 
 </div>
 
-<div class="d-lg-flex px-lg-5">
-<!-- TRANSTORNO -->
-<section class="container d-flex justify-content-center my-5">
+<div class="d-lg-flex justify-content-center container">
+	
+<!-- VICIOS -->
+<section class="container d-flex justify-content-center my-5 px-lg-5">
 	
 	<!-- Button trigger modal -->
-	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTranstorno" data-anima="baixo">
-		<h1 class="position-absolute top-50 start-50 translate-middle display-4">TRANSTORNO</h1>
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalVicios" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-4">VÍCIOS</h1>
 		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
 			</button>
 	  
 	  <!-- Modal -->
-	  <div class="modal fade" id="modalTranstorno" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalTranstornoLabel" aria-hidden="true">
+	  <div class="modal fade" id="modalVicios" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalViciosLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h1 class="modal-title fs-5" id="modalTranstornoLabel">Transtorno</h1>
+			  <h1 class="modal-title fs-5" id="modalViciosLabel">Vícios</h1>
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -132,26 +134,26 @@
 	  </div>
 	
 	</section>
-<!-- end Transtorno-->
+<!-- end Vicios-->
 
 
 
-<!-- AVALIAÇÃO -->
-<section class="container d-flex justify-content-center my-5">
+<!-- ESTRESSE PÓS-TRAUMATICO -->
+<section class="container d-flex justify-content-center my-5 px-lg-5">
 	
 	<!-- Button trigger modal -->
-	<button type="button" class="btn border-none shadow w-75 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAvaliacao" data-anima="baixo">
-		<h1 class="position-absolute top-50 start-50 translate-middle display-4">AVALIAÇÃO</h1>
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalEstresse" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-5">ESTRESSE PÓS-TRAUMÁTICO</h1>
 		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
 		
 	</button>
 	  
 	  <!-- Modal -->
-	  <div class="modal fade" id="modalAvaliacao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalAvaliacaoLabel" aria-hidden="true">
+	  <div class="modal fade" id="modalEstresse" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalEstresseLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h1 class="modal-title fs-5" id="modalAvaliacaoLabel">Avaliação</h1>
+			  <h1 class="modal-title fs-5" id="modalEstresseLabel">Estresse Pós-traumático</h1>
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -166,9 +168,143 @@
 	  </div>
 	
 </section>
-<!-- end Avaliação-->
+<!-- end Estresse-->
 
 </div>
+
+<div class="d-lg-flex justify-content-center container">
+	
+	<!-- FOBIAS -->
+	<section class="container d-flex justify-content-center my-5 px-lg-5">
+		
+		<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalFobias" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-4">FOBIAS</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+	</button>
+	  
+	  <!-- Modal -->
+	  <div class="modal fade" id="modalFobias" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalFobiasLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h1 class="modal-title fs-5" id="modalFobiasLabel">Fobias</h1>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+			  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+	</section>
+	<!-- end Fobias-->
+	
+	
+	<!-- TRANSTORNOS DO SONO -->
+	<section class="container d-flex justify-content-center my-5 px-lg-5">
+		
+		<!-- Button trigger modal -->
+		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
+			<h1 class="position-absolute top-50 start-50 translate-middle display-5">TRANSTORNOS DO SONO</h1>
+			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+		</button>
+		  
+		  <!-- Modal -->
+		  <div class="modal fade" id="modalDepressao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalDepressaoLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h1 class="modal-title fs-5" id="modalDepressaoLabel">Depressão</h1>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+				  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		
+		</section>
+	<!-- end Transtorno do sono-->
+	
+</div>
+
+<div class="d-lg-flex justify-content-center container">
+	
+	<!-- TRANSTORNOS ALIMENTARES -->
+	<section class="container d-flex justify-content-center my-5 px-lg-5">
+		
+		<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTA" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-5">TRANSTORNOS ALIMENTARES</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+	</button>
+	  
+	  <!-- Modal -->
+	  <div class="modal fade" id="modalTA" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalTALabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h1 class="modal-title fs-5" id="modalTALabel">Transtornos Alimentares</h1>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+			  <button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+	</section>
+	<!-- end Fobias-->
+	
+	
+<!-- (TOC) -->
+<section class="container d-flex justify-content-center my-5 px-lg-5">
+	
+	<!-- Button trigger modal -->
+	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalToc" data-anima="baixo">
+		<h1 class="position-absolute top-50 start-50 translate-middle display-5">TOC</h1>
+		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+	</button>
+		
+		<!-- Modal -->
+		<div class="modal fade" id="modalToc" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalTocLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="modalTocLabel">Transtorno Obssessivo Compulsivo</h1>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+				<button type="button" class="btn btn-primary">Iniciar Tratamento</button>
+			</div>
+			</div>
+		</div>
+		</div>
+	
+	</section>
+<!-- end TOC-->
+	
+	</div>
     
 <!--end Tratamentos -->
 
