--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -2,7 +2,7 @@
 <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-4 pb-lg-5 pt-0">
+      <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           
           <div class="col-lg-8 mb-3 d-flex flex-column align-items-center" data-anima="esquerda">
@@ -153,13 +153,14 @@
                           <div class="clearfix"></div>
                           <div class="col-lg-12 my-lg-2 d-flex justify-content-center align-items-center flex-column">
                             
+                            <!-- Resposta do formulário enviado -->
                               <% if(formContato.info){ %>
                                   <div class="container p-4 position-absolute bottom-0 mx-auto pulse-brilho">                                
                                     <div class="row">                                
                                       <div class="col-md-4 mx-auto w-auto">                                
                                         <div class="alert alert-success alert-dismissible fade show" role="alert">
                                 
-                                          <span><%= formContato.info %>! Obrigada pelo contato, responderei o mais rápido possível!</span>
+                                          <span><%= formContato.info %>! Obrigada pelo contato, responderei o mais rápido possívels!</span>
                                 
                                           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                                 
@@ -185,7 +186,7 @@
                                 </div>
                               <% } %>
                           
-                            
+                            <!-- btn enviar do formulário -->
                             <button id="sendMessageButton" class="botao-dourado btn-hover-lt" type="submit"> <span class="">Enviar</span></button>
                           </div>
                           
